--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "devDependencies": {
     "@nestjs/cli": "^8.2.0",
     "@nestjs/testing": "^8.2.6",
-    "@types/node": "^17.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.5.0",
-    "jest": "^27.0.6",
-    "ts-node": "^10.0.0",
-    "typescript": "4.5.2"
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.17",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
+    "eslint": "^8.8.0",
+    "jest": "^27.5.1",
+    "ts-jest": "^27.1.3",
+    "ts-node": "^10.5.0",
+    "typescript": "4.5.5"
   }
 }
