👷 GitHub Actions configuration 👷 SonarCloud analysis

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,15 +30,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run tests
-        run: npm run test
+      - name: Run tests and generate Coverage report
+        run: npm run test:coverage
 
       - name: SonarCloud Scan
-        uses: sonarsource/sonarcloud-github-action@master
+        uses: SonarSource/sonarcloud-github-action@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        with:
-          args: >
-            -Dsonar.organization=alainncls
-            -Dsonar.projectKey=alainncls_strava-segments-to-nfts
