--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^8.2.6",
+    "@nestjs/config": "^1.1.7",
     "@nestjs/core": "^8.2.6",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.2.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^6.2.1"
+    "mongoose": "^6.2.1",
+    "strava-v3": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.0",
