--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "@nestjs/core": "^8.2.6",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.2.6",
+    "canvas": "^2.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.2.1",
+    "polyline-encoded": "^0.0.9",
     "strava-v3": "^2.1.0"
   },
   "devDependencies": {
