--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^5.11.0",
     "eslint": "^8.8.0",
     "jest": "^27.5.1",
+    "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.5.0",
     "typescript": "4.5.5"
