--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,8 +32,11 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Run tests and generate Coverage report
+      - name: Run unit tests and generate coverage report
         run: npm run test:coverage
+
+      - name: Run e2e tests and generate coverage report
+        run: npm run test:e2e:coverage
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
