--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=alainncls_strava-segments-to-nfts
 sonar.organization=alainncls
-sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.lcov.reportPaths=coverage-unit/lcov.info,coverage-e2e/lcov.info
+sonar.coverage.exclusions=**/*e2e-spec*,**/*module*,**/test/*,**/main.ts,**/index.js
