--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "removeComments": true,
     "esModuleInterop": true,
     "noLib": false,
-    "lib": ["es2017"],
+    "lib": [
+      "es2017"
+    ],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es6",
