--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
   "author": "Alain Nicolas",
   "license": "ISC",
   "dependencies": {
-    "@nestjs/common": "^8.2.6",
-    "@nestjs/config": "^1.1.7",
-    "@nestjs/core": "^8.2.6",
-    "@nestjs/mongoose": "^9.0.2",
-    "@nestjs/platform-express": "^8.2.6",
-    "canvas": "^2.9.0",
+    "@nestjs/common": "^8.4.3",
+    "@nestjs/config": "^2.0.0",
+    "@nestjs/core": "^8.4.3",
+    "@nestjs/mongoose": "^9.0.3",
+    "@nestjs/platform-express": "^8.4.3",
+    "canvas": "^2.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
-    "mongoose": "^6.2.1",
+    "mongoose": "^6.2.8",
     "polyline-encoded": "^0.0.9",
     "strava-v3": "^2.1.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.0",
-    "@nestjs/testing": "^8.2.6",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^17.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "eslint": "^8.9.0",
+    "@nestjs/cli": "^8.2.4",
+    "@nestjs/testing": "^8.4.3",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.12.0",
     "jest": "^27.5.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.1",
     "supertest": "^6.2.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typescript": "4.5.5"
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   }
 }
