--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "canvas": "^2.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "ipfs-http-client": "^56.0.2",
     "mongoose": "^6.2.8",
     "polyline-encoded": "^0.0.9",
     "strava-v3": "^2.1.0"
