--- a/package.json
+++ b/package.json
@@ -2,24 +2,27 @@
   "name": "strava-segments-to-nfts",
   "version": "0.0.1",
   "description": "Generate an NFT for each new unique segment a Strava user runs through",
+  "repository": "git@github.com:alainncls/strava-segments-to-nfts.git",
+  "license": "ISC",
+  "author": "Alain Nicolas",
   "main": "index.js",
   "scripts": {
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start": "nest start",
+    "start:debug": "nest start --debug --watch",
+    "start:dev": "nest start --watch",
+    "start:prod": "node dist/main",
     "test": "jest --config=jest.json",
-    "test:watch": "jest --config=jest.json --watch",
     "test:coverage": "jest --config=jest.json --coverage",
     "test:e2e": "jest --config=jest-e2e.json",
+    "test:e2e:coverage": "jest --config=jest-e2e.json --coverage",
     "test:e2e:watch": "jest --config=jest-e2e.json --watch",
-    "test:e2e:coverage": "jest --config=jest-e2e.json --coverage"
+    "test:watch": "jest --config=jest.json --watch",
+    "types": "npm run types:build && npm run types:move",
+    "types:build": "npx typechain --target ethers-v5 blockchain/build/contracts/*",
+    "types:move": "rm -rf src/config/types && mv types src/config"
   },
-  "repository": "git@github.com:alainncls/strava-segments-to-nfts.git",
-  "author": "Alain Nicolas",
-  "license": "ISC",
   "dependencies": {
     "@nestjs/common": "^8.4.3",
     "@nestjs/config": "^2.0.0",
@@ -32,21 +35,30 @@
     "ipfs-http-client": "^56.0.2",
     "mongoose": "^6.2.8",
     "polyline-encoded": "^0.0.9",
-    "strava-v3": "^2.1.0"
+    "strava-v3": "^2.1.0",
+    "truffle": "^5.5.11"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.4",
     "@nestjs/testing": "^8.4.3",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@typechain/ethers-v5": "^10.0.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "chai": "^4.3.6",
+    "coveralls": "^3.1.1",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.1",
+    "solidity-coverage": "0.7.19",
     "supertest": "^6.2.2",
+    "truffle": "^5.5.7",
+    "truffle-assertions": "^0.9.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
+    "typechain": "^8.0.0",
     "typescript": "^4.6.3"
   }
 }
