--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "ipfs-http-client": "^56.0.2",
     "mongoose": "^6.2.8",
     "polyline-encoded": "^0.0.9",
-    "strava-v3": "^2.1.0",
-    "truffle": "^5.5.11"
+    "strava-v3": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.2.4",
@@ -54,7 +53,7 @@
     "prettier": "^2.6.1",
     "solidity-coverage": "0.7.19",
     "supertest": "^6.2.2",
-    "truffle": "^5.5.7",
+    "truffle": "^5.5.11",
     "truffle-assertions": "^0.9.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
