--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,9 +4,43 @@ on:
   push:
 
 jobs:
-  test:
+  build-contract:
 
-    name: Tests
+    name: Build smart contract
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Source code
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup NodeJS 16
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+
+      - name: Show NodeJS & NPM versions
+        run: node --version && npm --version
+
+      - name: Install Truffle
+        run: npm install truffle -g
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Run tests & Generate coverage
+        run: cd blockchain && truffle run coverage
+
+      - name: Send coverage to Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          path-to-lcov: ./blockchain/coverage/lcov.info
+
+  build-server:
+
+    name: Build server
     runs-on: ubuntu-latest
 
     steps:
