--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Build
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
         run: npm install truffle -g
 
       - name: Install Dependencies
-        run: npm ci
+        run: cd blockchain && npm ci
 
       - name: Run tests & Generate coverage
         run: cd blockchain && truffle run coverage
