--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,7 +1,6 @@
 name: Build
 
-on:
-  push:
+on: [push]
 
 jobs:
   build-contract:
@@ -10,18 +9,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Source code
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+      - uses: actions/checkout@v2
 
       - name: Setup NodeJS 16
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-
-      - name: Show NodeJS & NPM versions
-        run: node --version && npm --version
+      - name: Show NodeJS version
+        run: npm --version
 
       - name: Install Truffle
         run: npm install truffle -g
@@ -56,12 +51,6 @@ jobs:
 
       - name: Show NodeJS & NPM versions
         run: node --version && npm --version
-
-      - name: Cache node_modules
-        uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
 
       - name: Install Dependencies
         run: npm ci
