♻️ Regroup server files in a dedicated directory

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -53,13 +53,13 @@ jobs:
         run: node --version && npm --version
 
       - name: Install Dependencies
-        run: npm ci
+        run: cd server && npm ci
 
       - name: Run unit tests and generate coverage report
-        run: npm run test:coverage
+        run: cd server && npm run test:coverage
 
       - name: Run e2e tests and generate coverage report
-        run: npm run test:e2e:coverage
+        run: cd server && npm run test:e2e:coverage
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
