--- a/server/tsconfig.build.json
+++ b/server/tsconfig.build.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
-    "node_modules",
+    "../node_modules",
     "dist",
     "test",
     "**/*spec.ts"
