--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "canvas": "^2.9.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "ethers": "^5.6.5",
     "ipfs-http-client": "^56.0.2",
     "mongoose": "^6.2.8",
     "polyline-encoded": "^0.0.9",
