--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Setup NodeJS 16
         uses: actions/setup-node@v2
         with:
@@ -44,6 +49,11 @@ jobs:
         with:
           fetch-depth: 0
 
+      - uses: actions/cache@v2
+        with:
+          path: '**/node_modules'
+          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+
       - name: Setup NodeJS 16
         uses: actions/setup-node@v2
         with:
@@ -52,11 +62,25 @@ jobs:
       - name: Show NodeJS & NPM versions
         run: node --version && npm --version
 
-      - name: Install Dependencies
+      - name: Install Server Dependencies
         run: cd server && npm ci
 
+      - name: Install Truffle
+        run: npm install truffle -g
+
+      - name: Install Blockchain Dependencies
+        run: cd blockchain && npm ci
+
+      - name: Generate contract types
+        run: cd blockchain && truffle compile && npm run types
+
       - name: Run unit tests and generate coverage report
-        run: cd server && npm run test:coverage
+        uses: mattallty/jest-github-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          working-directory: "server"
+          test-command: "yarn run test:coverage"
 
       - name: Run e2e tests and generate coverage report
         run: cd server && npm run test:e2e:coverage
