--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
   "author": "Alain Nicolas",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint \\\"{src,apps,libs,test}/**/*.ts\\\"",
-    "lint:fix": "eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "start": "nest start",
     "start:debug": "nest start --debug --watch",
     "start:dev": "nest start --watch",
