--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -15,7 +15,8 @@
     "sourceMap": true,
     "allowJs": true,
     "outDir": "./dist",
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "resolveJsonModule": true
   },
   "include": [
     "src/**/*"
