--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=alainncls_strava-segments-to-nfts
 sonar.organization=alainncls
 sonar.javascript.lcov.reportPaths=server/coverage-unit/lcov.info,server/coverage-e2e/lcov.info
-sonar.coverage.exclusions=**/*e2e-spec*,**/*module*,**/test/*,**/main.ts,**/index.js
+sonar.coverage.exclusions=**/*e2e-spec*,**/*module*,**/test/*,**/main.ts,**/index.js,blockchain/**
